LMS/force-app/main/default/objects/Loan_Repayment__c/Loan_Repayment__c.object-meta.xml
<CustomObject>
    <label>Loan Repayment</label>
    <nameField>
        <displayFormat>LR-{0000000}</displayFormat>
        <label>Loan Repayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Repayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>