LMS/force-app/main/default/objects/Loan_Repayment__c/fields/apital_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>apital_Outstanding__c</fullName>
    <label>apital Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>