LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Capital_Outstanding_del__c.field-meta.xml
<CustomField>
    <fullName>Capital_Outstanding_del__c</fullName>
    <label>Capital Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>