LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Capital_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Capital_Repaid__c</fullName>
    <label>Capital Repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>