LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Capitalized_cost__c.field-meta.xml
<CustomField>
    <fullName>Capitalized_cost__c</fullName>
    <label>Capitalized cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>