LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Commercial_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Calculator</label>
    <referenceTo>MortgageCalc__Financial_Calculator__c</referenceTo>
    <relationshipLabel>Loan Repayments</relationshipLabel>
    <relationshipName>Loan_Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>