LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Financial_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Financial_Calculator__c</fullName>
    <label>Financial Calculator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>