LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Loan_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Account 2</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Loan Repayments</relationshipLabel>
    <relationshipName>Loan_Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>