LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Monthly_depreciation_fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_depreciation_fee__c</fullName>
    <label>Monthly depreciation fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>