LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Montlhy_sales_tax_payment__c.field-meta.xml
<CustomField>
    <fullName>Montlhy_sales_tax_payment__c</fullName>
    <label>Montlhy sales tax payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>