LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Property_Tax__c.field-meta.xml
<CustomField>
    <fullName>Property_Tax__c</fullName>
    <label>Property Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>