LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Repayment_Number__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Number__c</fullName>
    <label>Repayment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>