LMS/force-app/main/default/objects/Loan_Repayment__c/fields/Residual_value__c.field-meta.xml
<CustomField>
    <fullName>Residual_value__c</fullName>
    <label>Residual value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>