LMS/force-app/main/default/objects/Loan_Repayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Repayment__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Closing_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>